--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -115,6 +115,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
 	<script src="{% static "js/bootstrap.min.js" %}"></script>
+
 	<script type="text/javascript" src="{% static "js/jquery.fancybox.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 	<script>
@@ -127,5 +128,6 @@
 	  ga('send', 'pageview');
 
 	</script>
+    {% block extra_script %}{% endblock extra_script %}
 </body>
 </html>
